# nsightful

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  ncu2markdown.py  pyproject.toml
.github/workflows/: test.yml
src/ncu2markdown/: __init__.py  cli.py  core.py  notebook.py
src/nsightful/: __init__.py  cli.py  ncu.py  notebook.py  nsys.py
test_data/: copy_blocked.txt
tests/: __init__.py  conftest.py  copy_blocked.csv  power_iteration__baseline.json  power_iteration__baseline.sqlite  test_cli.py  test_core.py  test_integration.py  test_ncu.py  test_notebook.py  test_nsys.py
